--- a/source/stylesheets/responsive.scss
+++ b/source/stylesheets/responsive.scss
@@ -364,7 +364,7 @@ screen and (max-device-width: 560px) and (orientation: landscape) {
 	}
 	
 	.product_images {
-	  min-height: 0;
+	  min-height: 150px;
 	  margin: 0 auto 14px;
 	 
 		.flex-viewport {
@@ -381,7 +381,7 @@ screen and (max-device-width: 560px) and (orientation: landscape) {
 	#product {
 		
 		.product_images {
-			min-height: 300px;
+			min-height: 200px;
 			
 			.flex-control-nav {
 				bottom: -32px;
